--- a/css/style.scss
+++ b/css/style.scss
@@ -5,7 +5,7 @@ html, body {
 }
 #container {
   width:100%;
-  height:100%;
+  margin-bottom:32px;
 
   #view-search {
 
@@ -30,7 +30,6 @@ html, body {
 }
 
 #view-results {
-  min-height:100%;
   margin-top:32px;
 }
 
