--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,54 @@
-html, body {
+html,
+body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-size: 1.1em;
+  background-color: #0E4675;
+  color: #F9D4DB; }
 
 .container {
   width: 100%;
-  margin-bottom: 32px; }
+  margin: 1em 1em 1em 1em; }
+  .container h1 {
+    font-size: 2em;
+    color: #F9545B; }
   .container .btn {
     color: #aaa;
-    background-color: transparent; }
+    background-color: transparent;
+    color: #9AE1D3; }
     .container .btn:hover {
-      color: pink; }
+      color: #FF9690; }
   .container input {
     border: none;
-    background: none; }
+    background: none;
+    color: #FF9690; }
     .container input:focus {
       outline: none;
       border-bottom: 1px solid #aaa; }
+    .container input::-webkit-input-placeholder {
+      /* Chrome/Opera/Safari */
+      color: #9AE1D3; }
+    .container input::-moz-placeholder {
+      /* Firefox 19+ */
+      color: #9AE1D3; }
+    .container input:-ms-input-placeholder {
+      /* IE 10+ */
+      color: #9AE1D3; }
+    .container input:-moz-placeholder {
+      /* Firefox 18- */
+      color: #9AE1D3; }
 
 #view-results {
   margin-top: 32px; }
 
 #search-results li {
   list-style: none; }
+  #search-results li a {
+    font-size: 1.3em;
+    color: #9AE1D3;
+    font-weight: 700; }
+  #search-results li p {
+    font-size: 1em; }
 
 footer {
   position: fixed;
@@ -29,6 +56,11 @@ footer {
   bottom: 0;
   left: 0;
   padding: 1rem;
-  background-color: #efefef; }
+  background-color: #0E4675;
+  border-top: 1px solid #F9545B; }
+  footer a {
+    color: #9AE1D3; }
+    footer a:hover {
+      color: #9AE1D3; }
 
 /*# sourceMappingURL=style.css.map */
